--- a/01_React-website/src/styles/App.scss
+++ b/01_React-website/src/styles/App.scss
@@ -130,3 +130,19 @@ html {
     }
   }
 }
+
+.App {
+  z-index: 2;
+  transform: translateY(0);
+  position: relative;
+}
+
+.page {
+  height: 100vh;
+  width: 100%;
+  background: $white;
+  .row {
+    display: flex;
+    align-items: center;
+  }
+}
