--- a/06_consortium-website/src/styles/App.scss
+++ b/06_consortium-website/src/styles/App.scss
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700&display=swap");
-@import "./varibles.scss";
-@import "./breakpoints.scss";
-@import "./components/header.scss";
+@import './breakpoints.scss';
+@import './varibles.scss';
 
 body,
 html {
