--- a/01_React-website/src/styles/App.scss
+++ b/01_React-website/src/styles/App.scss
@@ -105,7 +105,7 @@ html {
       position: absolute;
       height: 100%;
       width: 33.333vw;
-      background: $black;
+      background: blue;
       bottom: 0;
       right: 66.666%;
       @include media("<=tablet") {
