--- a/06_consortium-website/src/styles/App.scss
+++ b/06_consortium-website/src/styles/App.scss
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap");
 @import "./varibles.scss";
 @import "./breakpoints.scss";
+@import "./components/cursor.scss";
 @import "./components/header.scss";
 @import "./components/banner.scss";
 @import "./components/cases.scss";
 @import "./components/navigation.scss";
+@import "./components/hero.scss";
+@import "./components/featured.scss";
+@import "./components/work.scss";
 
 body,
 html {
@@ -50,6 +54,13 @@ html {
   }
   .space-between {
     justify-content: space-between;
+  }
+}
+
+.row {
+  display: flex;
+  height: 100%;
+  @include media("<=phone") {
   }
 }
 
