--- a/06_consortium-website/src/styles/components/cases.scss
+++ b/06_consortium-website/src/styles/components/cases.scss
@@ -1,6 +1,22 @@
 .cases {
-  height: 50vh;
+
   height: calc(var(--vh, 1vh) * 50);
+  width: 1560px;
+  min-width: 1560px;
+  max-width: 1080px;
+  height: 100%;
+  @include media("<=1560px") {
+    width: 1280px;
+    min-width: 1280px;
+  }
+  @include media("<=desktop") {
+    width: 1080px;
+    min-width: 1080px;
+  }
+  @include media("<=1080px") {
+    width: 100%;
+    min-width: 100%;
+  }
   .cases-navigation {
     position: absolute;
     bottom: 0px;
