--- a/12_consortium-website/src/styles/components/button.scss
+++ b/12_consortium-website/src/styles/components/button.scss
@@ -20,7 +20,7 @@ button {
       margin: 0;
       width: 3rem;
       height: 3rem;
-      background: $black;
+      background: $color-primary;
       border-radius: 1.625rem;
       .icon {
         @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
@@ -28,7 +28,7 @@ button {
         top: 0;
         bottom: 0;
         margin: auto;
-        background: $white;
+        background: $color-secondary;
         &.arrow {
           @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
           left: 0.625rem;
@@ -42,8 +42,8 @@ button {
             right: 0.0625rem;
             width: 0.625rem;
             height: 0.625rem;
-            border-top: 0.125rem solid #fff;
-            border-right: 0.125rem solid #fff;
+            border-top: 0.125rem solid $color-secondary;
+            border-right: 0.125rem solid $color-secondary;
             transform: rotate(45deg);
           }
         }
@@ -58,7 +58,7 @@ button {
       bottom: 0;
       padding: 0.75rem 0;
       margin: 0 0 0 1.85rem;
-      color: $black;
+      color: $color-secondary;
       font-weight: 700;
       line-height: 1.6;
       text-align: center;
@@ -70,13 +70,13 @@ button {
       width: 100%;
       .icon {
         &.arrow {
-        background: $white;
+        background: $color-secondary;
         transform: translate(1rem, 0);
         }
       }
     }
     .button-text {
-      color: $white;
+      color: $color-secondary;
     }
   }
 }
